<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <!-- OverView Category   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <!-- Label Field -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle"/>
    <!-- input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
    <!-- Name field -->
        <EditText
            android:id="@+id/edit_pet_name"
            android:hint="@string/hint_pet_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"/>
        <EditText
            android:id="@+id/edit_pet_breed"
            android:hint="@string/hint_pet_breed"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label Field -->
        <TextView
            android:text="@string/category_gender"
            style="@style/CategoryStyle"/>
        <!-- input fields -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_measurement"
            style="@style/CategoryStyle" />

        <!-- input fields -->

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

        <!-- weight field -->
        <EditText
            android:id="@+id/edit_pet_weight"
            android:hint="@string/hint_pet_weight"
            android:inputType="number"
            style="@style/EditorFieldStyle"/>

        <!-- Units for weight (Kg) -->
        <TextView
            android:id="@+id/label_weight_units"
            android:text="@string/unit_pet_weight"
            style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

